Fixed delete-task icon being uneven with task

--- a/3380 Project/src/CSS Files/CategoryComponent.css
+++ b/3380 Project/src/CSS Files/CategoryComponent.css
@@ -163,7 +163,6 @@ body {
 .delete-task-icon {
     font-size: 20px;
     position: relative;
-    top: 0px;
     right: 5px;
     margin: 0;
     cursor: pointer;
